Uploading files to firebase

--- a/Dare4CharFrontend/src/index.html
+++ b/Dare4CharFrontend/src/index.html
@@ -10,6 +10,11 @@
             href="https://fonts.googleapis.com/icon?family=Material+Icons"
             rel="stylesheet"
         />
+        <link
+            type="text/css"
+            rel="stylesheet"
+            href="https://unpkg.com/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+        />
     </head>
     <body>
         <app-root></app-root>
